--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,23 @@
 body
 {
-          text-align: center;
-          font-family: 'Courier New', Courier, monospace;
-          
+          color: black;
+          text-align: left;
+          font-family: 'Arial';
 
+
+}
+#container
+{
+          width: 70% ;
+          padding: 1em;
+          text-align: left;
+          border: 1px solid white;
+          margin: 0 auto;
+
+}
+
+#container h1
+
+{
+          font-size: 20 px;
 }
